k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: employee-platform
  labels:
    name: employee-platform
    environment: dev
