k8s/11-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: employee-platform-ingress
  namespace: employee-platform
  annotations:
    kubernetes.io/ingress.class: gce
    networking.gke.io/managed-certificates: employee-platform-cert
    kubernetes.io/ingress.global-static-ip-name: employee-platform-ip
spec:
  rules:
    - host: app.saad-cloud.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
    - host: api.saad-cloud.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 3001
